Bug 131905 - FILESAVE PPTX Text in table loses vertical centering, open wrong in LO and MSO (fileopen of MSO centering OK)
Summary: FILESAVE PPTX Text in table loses vertical centering, open wrong in LO and MS...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: All All
: medium normal
Assignee: Tibor Nagy (NISZ)
URL:
Whiteboard: target:7.2.0
Keywords: filter:pptx, implementationError
Depends on:
Blocks: PPTX-Tables
  Show dependency treegraph
 
Reported: 2020-04-05 14:41 UTC by Stelios
Modified: 2021-03-22 11:23 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Screenshot before and after to show the bug of this report (52.79 KB, image/png)
2020-04-12 09:33 UTC, Stelios
Details
Example file (14.48 KB, application/vnd.oasis.opendocument.presentation)
2020-06-20 10:02 UTC, Buovjaga
Details
Example compared LO 7.1+ MSO (108.99 KB, image/png)
2020-11-10 11:13 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stelios 2020-04-05 14:41:09 UTC
Description:
Hello.

Make .pptx file, to add shapes, connectors between shapes and tables.

Make one of the shapes to be an Arc, with no fill and an arrowhead. 

Make a graph with connectors connecting shapes, maybe with colors and arrowheads.

Make table, and for all the cells/each cell/each text in cell make an edit to align the text in the center vertically.

Everything can be saved successfully. Shut down LibreOffice Impress.

Open the .pptx file.

The no fill Arc, will be with fill. 

The connectors will be of 0 length and snapped to top left corner instead of in their place.

The text in the table's cells won't be aligned the way you edited them to be.

Steps to Reproduce:
1. I have written the description like steps, so I have nothing to add here.

Actual Results:
Misplaced text and shapes, as well as not properly saved attributes.

Expected Results:
Load my saved document the way I saved and closed it.


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
[Information automatically included from LibreOffice]
Locale: en-US
Module: PresentationDocument
[Information guessed from browser]
OS: Linux (All)
OS is 64bit: yes

Version: 6.3.5.2
Build ID: 6.3.5-3
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: kde5; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 ian 2020-04-05 15:24:25 UTC Comment hidden (obsolete)
Comment 2 Stelios 2020-04-12 09:33:31 UTC
Created attachment 159509 [details]
Screenshot before and after to show the bug of this report

I couldn't replicate the issue with the arc, but the other two examples are presented.
Comment 3 Buovjaga 2020-06-20 10:01:43 UTC
Let's turn this one to be about the table text vertical centering issue. Each issue should be in its own report!

Looks like the centering issue has been there forever, already seen in 4.4.7. In 3.3.0, even the ODP is not imported correctly. Did not investigate how the centering is achieved or if PPTX actually supports it.

I did the centering from the Sidebar Properties tab, Paragraph section, Center vertically.

For the connector issue, I can't reproduce. Please open a new report for it and attach an ODP file so we can quickly and easily test saving to PPTX.

Arch Linux 64-bit
Version: 7.1.0.0.alpha0+
Build ID: 8e4c79472644452431381733a5e4b21f98fcdcf3
CPU threads: 8; OS: Linux 5.7; UI render: default; VCL: kf5
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 19 June 2020
Comment 4 Buovjaga 2020-06-20 10:02:09 UTC
Created attachment 162227 [details]
Example file
Comment 5 Buovjaga 2020-06-20 10:03:21 UTC
Well, seems it is possible in Powerpoint at least https://www.indezine.com/products/powerpoint/learn/tables/2013/text-alignment-within-table-cells.html
Comment 6 Timur 2020-11-10 11:13:30 UTC
Created attachment 167167 [details]
Example compared LO 7.1+ MSO

Repro 7.1+ for filesave to PPTX both in LO and MSO. No repro for save to PPT.
Comment 7 Commit Notification 2021-03-19 15:55:35 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/48f6ce530f3546570eabdf398388185ab988636b

tdf#131905 PPTX table export: fix vertical alignment

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Timur 2021-03-22 11:23:05 UTC
Looking good, I set Verified. Seems like test for PPTX is included.