tdf#131905 PPTX export: the text in the table loses vertical alignment.

Change-Id: Id5ca22550b5613566d7ea2a93e8a36fdca31860d